--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,13 @@
   /* max-height: 400px; */
   height: auto;
 }
-
+.btns{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid wheat;
+  padding-top: 10px;
+}
 
 @media only screen and (max-width: 600px) {
   .countrys-container{
